Fixed page-header spacing

--- a/css/structure.css
+++ b/css/structure.css
@@ -15,9 +15,14 @@ body {
 
 .page-header {
 	background-color: #23527c;
-	padding-bottom: 0;
+	padding-bottom: 20px;
 	margin-bottom: 2rem;
 	}
+
+.row.page-header h1 {
+		padding-bottom: 10px;
+		margin-bottom: 0;
+}
 
 #content {
 	border-radius: 5px;
