--- a/css/typography.css
+++ b/css/typography.css
@@ -67,7 +67,7 @@ h3 {
 	font-size: 2rem;
 	text-shadow: none;
 	line-height: 3rem;
-	margin-bottom: 20px;
+	margin-bottom: 0px;
 	}
 
 input[type="submit"] {
